--- a/template.yaml
+++ b/template.yaml
@@ -1,84 +1,31 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: strict-stack-selector
-  title: Domain-Based Stack Selector with Repo Integration
-  description: Select domain, focus area, and stack — then open matching GitHub repo in VSCode
+  name: dynamic-tech-stack
+  title: Dynamic Tech Stack Selector with Repo Links
+  description: Choose domain, focus area, tech stack and open matching GitHub repo in VSCode.dev
 spec:
   owner: user:your-username
   type: service
 
   parameters:
-    - title: Select Your Domain and Area
+    - title: Select Your Stack
       required: [domain, techArea]
       properties:
         domain:
           title: Domain
           type: string
-          enum:
-            - Insurance
-            - Banking
-            - HealthCare
-            - Education
+          enum: [Banking, Insurance, HealthCare, Education]
         techArea:
           title: Focus Area
           type: string
-          enum:
-            - Frontend
-            - Backend
-            - Database
+          enum: [Frontend, Backend, Database]
 
       dependencies:
         domain:
           oneOf:
 
-            # === Insurance Domain ===
-            - properties:
-                domain:
-                  const: Insurance
-                techArea:
-                  enum: [Frontend, Backend, Database]
-              required: [techArea]
-              dependencies:
-                techArea:
-                  oneOf:
-                    - properties:
-                        techArea:
-                          const: Frontend
-                        frontend:
-                          title: UI Framework
-                          type: string
-                          enum: [React]
-                        repoUrl:
-                          type: string
-                          default: https://github.com/kjchandan/simple-frontend-code
-                      required: [frontend]
-
-                    - properties:
-                        techArea:
-                          const: Backend
-                        backend:
-                          title: Backend Platform
-                          type: string
-                          enum: [Django]
-                        repoUrl:
-                          type: string
-                          default: https://github.com/your-org/insurance-django-backend
-                      required: [backend]
-
-                    - properties:
-                        techArea:
-                          const: Database
-                        database:
-                          title: Database
-                          type: string
-                          enum: [PostgreSQL]
-                        repoUrl:
-                          type: string
-                          default: https://github.com/your-org/insurance-postgresql-schema
-                      required: [database]
-
-            # === Banking Domain ===
+            # BANKING
             - properties:
                 domain:
                   const: Banking
@@ -94,42 +41,48 @@ spec:
                         frontend:
                           title: UI Framework
                           type: string
-                          enum: [Vue.js]
+                          enum: [Vue.js, Next.js, Typescript]
                         repoUrl:
                           type: string
-                          default: https://github.com/your-org/banking-vuejs-frontend
+                          enum:
+                            - https://github.com/your-org/banking-vuejs-frontend
+                            - https://github.com/your-org/banking-nextjs-frontend
+                            - https://github.com/your-org/banking-typescript-frontend
                       required: [frontend]
-
                     - properties:
                         techArea:
                           const: Backend
                         backend:
                           title: Backend Platform
                           type: string
-                          enum: [Java]
+                          enum: [Java, Python, Ruby]
                         repoUrl:
                           type: string
-                          default: https://github.com/your-org/banking-java-backend
+                          enum:
+                            - https://github.com/your-org/banking-java-backend
+                            - https://github.com/your-org/banking-python-backend
+                            - https://github.com/your-org/banking-ruby-backend
                       required: [backend]
-
                     - properties:
                         techArea:
                           const: Database
                         database:
                           title: Database
                           type: string
-                          enum: [MySQL]
+                          enum: [MYSQL, PostgreSQL]
                         repoUrl:
                           type: string
-                          default: https://github.com/your-org/banking-mysql-schema
+                          enum:
+                            - https://github.com/your-org/banking-mysql-schema
+                            - https://github.com/your-org/banking-postgresql-schema
                       required: [database]
 
-            # === HealthCare Domain ===
+            # INSURANCE
             - properties:
                 domain:
-                  const: HealthCare
+                  const: Insurance
                 techArea:
-                  enum: [Frontend]
+                  enum: [Frontend, Backend, Database]
               required: [techArea]
               dependencies:
                 techArea:
@@ -140,33 +93,165 @@ spec:
                         frontend:
                           title: UI Framework
                           type: string
-                          enum: [Angular 2+]
+                          enum: [React, Angular]
                         repoUrl:
                           type: string
-                          default: https://github.com/your-org/healthcare-angular-frontend
+                          enum:
+                            - https://github.com/kjchandan/simple-frontend-code  # React (your repo)
+                            - https://github.com/your-org/insurance-angular-frontend
                       required: [frontend]
-
-            # === Education Domain ===
-            - properties:
-                domain:
-                  const: Education
-                techArea:
-                  enum: [Backend]
-              required: [techArea]
-              dependencies:
-                techArea:
-                  oneOf:
                     - properties:
                         techArea:
                           const: Backend
                         backend:
                           title: Backend Platform
                           type: string
-                          enum: [Springboot]
+                          enum: [Scala, Go, Django]
                         repoUrl:
                           type: string
-                          default: https://github.com/your-org/education-springboot-backend
+                          enum:
+                            - https://github.com/your-org/insurance-scala-backend
+                            - https://github.com/your-org/insurance-go-backend
+                            - https://github.com/your-org/insurance-django-backend
                       required: [backend]
+                    - properties:
+                        techArea:
+                          const: Database
+                        database:
+                          title: Database
+                          type: string
+                          enum: [MYSQL, PostgreSQL]
+                        repoUrl:
+                          type: string
+                          enum:
+                            - https://github.com/your-org/insurance-mysql-schema
+                            - https://github.com/your-org/insurance-postgresql-schema
+                      required: [database]
+
+            # HEALTHCARE
+            - properties:
+                domain:
+                  const: HealthCare
+                techArea:
+                  enum: [Frontend, Backend, Database]
+              required: [techArea]
+              dependencies:
+                techArea:
+                  oneOf:
+                    - properties:
+                        techArea:
+                          const: Frontend
+                        frontend:
+                          title: UI Framework
+                          type: string
+                          enum: [Three.js, ReactJs, Angular 2+]
+                        repoUrl:
+                          type: string
+                          enum:
+                            - https://github.com/your-org/healthcare-threejs-frontend
+                            - https://github.com/your-org/healthcare-reactjs-frontend
+                            - https://github.com/your-org/healthcare-angular-frontend
+                      required: [frontend]
+                    - properties:
+                        techArea:
+                          const: Backend
+                        backend:
+                          title: Backend Platform
+                          type: string
+                          enum: [Springboot, ASP.NET]
+                        repoUrl:
+                          type: string
+                          enum:
+                            - https://github.com/your-org/healthcare-springboot-backend
+                            - https://github.com/your-org/healthcare-aspnet-backend
+                      required: [backend]
+                    - properties:
+                        techArea:
+                          const: Database
+                        database:
+                          title: Database
+                          type: string
+                          enum: [MYSQL, PostgreSQL]
+                        repoUrl:
+                          type: string
+                          enum:
+                            - https://github.com/your-org/healthcare-mysql-schema
+                            - https://github.com/your-org/healthcare-postgresql-schema
+                      required: [database]
+
+            # EDUCATION
+            - properties:
+                domain:
+                  const: Education
+                techArea:
+                  enum: [Frontend, Backend, Database]
+              required: [techArea]
+              dependencies:
+                techArea:
+                  oneOf:
+                    - properties:
+                        techArea:
+                          const: Frontend
+                        frontend:
+                          title: UI Framework
+                          type: string
+                          enum: [Vue.js, Next.js, Typescript, Three.js, ReactJs, Angular 2+]
+                        repoUrl:
+                          type: string
+                          enum:
+                            - https://github.com/your-org/education-vuejs-frontend
+                            - https://github.com/your-org/education-nextjs-frontend
+                            - https://github.com/your-org/education-typescript-frontend
+                            - https://github.com/your-org/education-threejs-frontend
+                            - https://github.com/your-org/education-reactjs-frontend
+                            - https://github.com/your-org/education-angular-frontend
+                      required: [frontend]
+                    - properties:
+                        techArea:
+                          const: Backend
+                        backend:
+                          title: Backend Platform
+                          type: string
+                          enum:
+                            - Java
+                            - Python
+                            - Ruby
+                            - PHP Kotlin
+                            - C sharp
+                            - Perl
+                            - Scala
+                            - Go
+                            - Djangi
+                            - Springboot
+                            - ASP.NET
+                        repoUrl:
+                          type: string
+                          enum:
+                            - https://github.com/your-org/education-java-backend
+                            - https://github.com/your-org/education-python-backend
+                            - https://github.com/your-org/education-ruby-backend
+                            - https://github.com/your-org/education-php-kotlin-backend
+                            - https://github.com/your-org/education-csharp-backend
+                            - https://github.com/your-org/education-perl-backend
+                            - https://github.com/your-org/education-scala-backend
+                            - https://github.com/your-org/education-go-backend
+                            - https://github.com/your-org/education-django-backend
+                            - https://github.com/your-org/education-springboot-backend
+                            - https://github.com/your-org/education-aspnet-backend
+                      required: [backend]
+                    - properties:
+                        techArea:
+                          const: Database
+                        database:
+                          title: Database
+                          type: string
+                          enum: [MYSQL, PostgreSQL]
+                        repoUrl:
+                          type: string
+                          enum:
+                            - https://github.com/your-org/education-mysql-schema
+                            - https://github.com/your-org/education-postgresql-schema
+                      required: [database]
 
   steps:
     - id: fetch
@@ -197,6 +282,6 @@ spec:
         icon: code
         url: https://vscode.dev/${{ parameters.repoUrl | replace('https://github.com/', 'github.com/') }}
 
-      - title: 🚀 Open in Replit
+      - title: 🚀 Open in Replit (optional)
         icon: rocket
         url: https://replit.com/
